fixed the horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,10 @@ body {
   color: #666666;
   font-family: "Open Sans", sans-serif;
 }
-
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 a {
   color: #03C4EB;
   transition: 0.5s;
